eu to cansado, vou parar por hoje

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
             <li>Home</li>
             <li>Sobre</li>
             <li>Habilidades</li>
+            <li class="dropdown">Idioma ▾
+                <ul class="dropdown-content">
+                    <li id="brasil"><img src="img/brasil.png" alt="icone-brasil"><p id="português">Português</p></li>
+                    <li><img src="img/estados-unidos.png" alt="icone-USA">Inglês</li>
+                </ul>
+            </li>
         </ul>
     </nav>
     <main></main>
